--- a/DAR-Patterns in data.Rmd
+++ b/DAR-Patterns in data.Rmd
@@ -22,6 +22,8 @@ View(pushups)
 help(pushups)
 ```
 
+I will use the three packages givin to view the information based on the research. 
+
 Among other things, the students recorded the type of position a player had on the team (either line or skill), and also the number of push-ups each player could perform in a two-minute period.
 
 Line players are on the offensive or defensive line.  They need to be a certain kind of speed, but they must also be quite big and strong.  Skill players do a lot of runninga and catching:  they are the quarterback, running backs, receivers, etc.
@@ -34,10 +36,7 @@ Our Research Question is:
 # Methods
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
 
-i will make a box plot to display the results of the informarion given to determined who does more pushups.
-
-
-
+I will make a box plot for the graphical method and use favstats for the numerical method to display the results of the informarion given to determined who does more pushups.
 
 # Results
 <!--You have both graphical and numerical methods, so you will have both graphical and numerical results to consider.!-->
