--- a/DAR-Patterns in data.Rmd
+++ b/DAR-Patterns in data.Rmd
@@ -67,6 +67,13 @@ the line players average out about 17 pushups, where as the skill players averag
 # Inferential Results
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position, data = pushups)
+```
+
+
+
+
 based on the information givin in the charts, I made a hypothesis that the skill players can do more push ups than tghe line players. I based this off of the data frame givin. I then test my hypothesis by creating ab graphical and numerical graph to conclude that total skill players average more pushups than line players. 
 # Discussion and Conclusion
 <!--State your overall conclusion.  This is also a good place to mention other Research Questions that came to mind as you were carrying out this study.!-->
